--- a/client-dashboard/package.json
+++ b/client-dashboard/package.json
@@ -14,9 +14,11 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@mui/x-data-grid": "^6.19.4",
+    "@mui/x-date-pickers": "^7.22.3",
     "@reduxjs/toolkit": "^2.3.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
