--- a/client-dashboard/package.json
+++ b/client-dashboard/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.13.3",
     "tailwindcss": "^3.4.15"
   },
   "browserslist": {
