--- a/server-dashboard/package.json
+++ b/server-dashboard/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "description": "Backend server for the scraping admin dashboard with JWT authentication",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.699.0",
+    "@aws-sdk/lib-dynamodb": "^3.699.0",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "csv-parse": "^5.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
