feat: add startScraping api and integrate

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
       - AWS_REGION=local
       - AWS_ACCESS_KEY_ID=local
       - AWS_SECRET_ACCESS_KEY=local
+      - REAL_ACCESS_KEY_ID=
+      - REAL_SECRET_ACCESS_KEY=
     volumes:
       - ./server-dashboard/logs:/usr/src/app/logs
       - ./full_estimate.csv:/usr/src/app/full_estimate.csv
