--- a/server-dashboard/package.json
+++ b/server-dashboard/package.json
@@ -13,6 +13,8 @@
   "description": "Backend server for the scraping admin dashboard with JWT authentication",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.699.0",
+    "@aws-sdk/client-ecs": "^3.708.0",
+    "@aws-sdk/credential-providers": "^3.699.0",
     "@aws-sdk/lib-dynamodb": "^3.699.0",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
